[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-pvp-melee-damage"
version = "0.1.0"
description = "Export Warframe PvP melee attack and slam damage metadata to pivot-ready Excel workbooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
]

[project.scripts]
wf-pvp-melee-damage = "pvp_melee_damage.cli:main"

[tool.setuptools.packages.find]
include = ["pvp_melee_damage*"]
