[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-pvp-melee-damage"
version = "0.1.0"
description = "Export Warframe PvP melee attack and slam damage metadata to analysis-ready Excel workbooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
]

[project.scripts]
wf-pvp-melee-damage = "pvp_melee_damage.cli:main"

[tool.setuptools.packages.find]
include = ["pvp_melee_damage*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
